<resources>
    <string name="app_name">SuzmeSayacHesapla</string>
    <string name="sayac_n_za_isim_veya_numara_veriniz">Sayacınıza isim veya numara veriniz...</string>
    <string name="fatura_ana_saya_lk_endeks_giriniz">Fatura Ana Sayaç İlk Endeks Giriniz</string>
    <string name="fatura_ana_saya_son_endeks_girin">Fatura Ana Sayaç Son Endeks Girin</string>
    <string name="s_zme_saya_lk_endeks_girin">Süzme Sayaç İlk Endeks Girin</string>
    <string name="s_zme_saya_son_endeks_girin">Süzme Sayaç Son Endeks Girin</string>
    <string name="fatura_okunma_tarihi_giriniz">Fatura Okunma Tarihi Giriniz</string>
    <string name="kaydet">kaydet</string>
    <string name="fatura_toplam_tutar_giriniz">Fatura Toplam Tutarı Giriniz</string>
    <string name="suzme_saya_hesaplanan_fatura_pay">suzme Sayaç Hesaplanan Fatura Payı</string>
    <string name="s_zme_saya_hesaplanan_fatura_pay">Süzme Sayaç Hesaplanan Fatura Payı</string>
    <string name="saya_ismi_veriniz_rnek_depo_ek_bina">Sayaç ismi veriniz.. (Örnek : Depo , Ek bina)</string>
    <string name="ana_saya_gelen_fatura_tutar">Ana Sayaç Gelen Fatura Tutarı</string>
    <string name="ana_saya_gelen_fatura_tutar_giriniz">Ana Sayaç Gelen Fatura Tutarı Giriniz</string>
    <string name="ana_fatura_sayac_lk_endeks_de_eri_giriniz">Ana Fatura Sayacı İlk Endeks Değeri Giriniz</string>
    <string name="ana_fatura_sayac_lk_endeks_giriniz_tek_zaman">Ana Fatura Sayacı İlk Endeks Giriniz (Tek Zaman)</string>
    <string name="ana_fatura_sayac_son_endeks_giriniz_tek_zaman">Ana Fatura Sayacı Son Endeks Giriniz (Tek Zaman)</string>
    <string name="s_zme_sayac_n_nceki_fatura_ile_okunan_t_de_erini_giriniz">Süzme Sayacın Önceki Fatura ile Okunan T Değerini Giriniz</string>
    <string name="s_zme_sayac_n_bu_fatura_ile_okunan_t_de_erini_giriniz">Süzme Sayacın Bu Fatura ile Okunan T Değerini Giriniz</string>
    <string name="s_zme_sayaca_d_en_hesaplanm_fatura_tutar">Süzme Sayaca Düşen Hesaplanmış Fatura Tutarı</string>
    <string name="ana_sayaca_gelen_fatura_tutar_n_giriniz">Ana Sayaca Gelen Fatura ₺ Tutarını Giriniz</string>
    <string name="s_zme_saya_tutar">Süzme Sayaç Tutarı (₺)</string>
    <string name="saya_tan_m">Sayaç Tanımı</string>
    <string name="s_zme_saya_fatura_tutar">Süzme Sayaç Fatura Tutarı</string>
    <string name="s_zme_saya_son_endeks">Süzme Sayaç Son Endeks</string>
    <string name="s_zme_saya_lk_endeks">Süzme Sayaç İlk Endeks</string>
    <string name="ana_saya_son_endeks">Ana Sayaç Son Endeks</string>
    <string name="ana_saya_lk_endeks">Ana Sayaç İlk Endeks</string>
    <string name="ana_fatura_tutar">Ana Fatura Tutarı</string>
    <string name="not_l_tfen_rakamlar_n_virg_lden_sonraki_ondal_k_k_s_mlar_n_girmeyiniz">Not : Lütfen rakamların virgülden sonraki ondalık kısımlarını girmeyiniz!</string>
    <string name="ana_fatura_saya_lk_endeks_de_eri_tek_zaman">Ana Fatura Sayaç İlk Endeks Değeri (Tek Zaman)</string>
    <string name="ana_fatura_saya_son_endeks_de_eri_tek_zaman">Ana Fatura Sayaç Son Endeks Değeri (Tek Zaman)</string>
    <string name="s_zme_saya_ge_en_ay_t_de_eri">Süzme Sayaç Geçen Ay T Değeri</string>
    <string name="s_zme_saya_bu_ay_t_de_eri">Süzme Sayaç Bu Ay T Değeri</string>
    <string name="ana_saya_saati_faturas_kar_ld_ayn_g_n_s_zme_sayac_t_de_erini_not_foto_al_n_z">Ana sayaç saati faturası çıkarıldığı aynı gün süzme sayac yalnızca T değer (VİRGÜLE KADAR) not alınız!</string>
    <string name="kay_t_olu_turma_tarihi">Kayıt Oluşturma Tarihi</string>
    <string name="s_zme_saya_yeni_t_de_eri">Süzme Sayaç Yeni T Değeri</string>
    <string name="s_zme_saya_eski_t_de_eri">Süzme Sayaç Eski T değeri</string>
</resources>